wazuh/ingresses/wazuh-dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-dashboard-ingress
  namespace: wazuh
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: "dashboard.wazuh.puffinsecurity.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 5601
  tls:
    - hosts:
        - "dashboard.wazuh.puffinsecurity.com"
      secretName: wazuh-dashboard-tls
